--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
